<resources>
    <string name="app_name">Rent 4\' U</string>
    <string name="EnterCardLbl">Enter Card Details</string>
    <string name="paymentLbl">Please select payment method</string>
    <string name="CardNoLbl">Card Number</string>
    <string name="nameLbl">Name on Card</string>
    <string name="cardNo">1234567891234567</string>
    <string name="nameCard">Enter your name on card</string>
    <string name="exDateLbl">Expiry Date</string>
    <string name="exDateHint">MM / YY</string>
    <string name="CVCno">CVC</string>
    <string name="cvcLbl">CVC Code</string>
    <string name="rb1">I agree to Terms and Conditions</string>
    <string name="payButton">Pay Now</string>
    <string name="cardDetailsLbl">Your Card Details</string>
    <string name="cardnlabel">Card Number</string>
    <string name="chNamelbl">Card Holder\'s Name</string>
    <string name="expDateLabel">Expiry Date</string>
    <string name="cvcLabel">CVC Code</string>
    <string name="cancelButton">Cancel Booking</string>
    <string name="buttonContinue">Continue</string>
    <string name="retrieveCardNoLbl">1234567891895632</string>
    <string name="retrieveCardHname">Perera M.K.L</string>
    <string name="exDateRead">08 / 24</string>
    <string name="CVCNoRead">652</string>
    <string name="successmsg">Payment Successful!</string>
    <string name="congratzlbl">Congratulation!</string>
    <string name="conflbl">Your Booking is Confirmed.</string>
    <string name="emailsentLbl">Email has been sent with details.</string>
    <string name="homeBtn">Back to Home</string>
    <string name="viewBtn">View Booking</string>
    <string name="cardNoHint">Enter your card number</string>
    <string name="updateBtn">UPDATE</string>
    <string name="bdeatils">Booking Details</string>
    <string name="btnContinue">Continue</string>
    <string name="bookingDetails">Your booking is Confirmed</string>
    <string name="pickup_details">We will pick up you on :</string>
    <string name="datenTime">30 October 2022 at 10.00 AM</string>
    <string name="location">Colombo, Sri Lanka</string>
    <string name="vehicleName">Audi A6 2017</string>
    <string name="lblLocation">Colombo, Sri Lanka</string>
    <string name="lblPrice">Rs.18,000</string>
    <string name="lblPerDay">Per Day</string>
    <string name="reservation">Reservation</string>
    <string name="noOfBookingDays">Number of Booking Days</string>
    <string name="lblDays">2</string>
    <string name="pickupDate">Pick-up Date</string>
    <string name="dropOffLbl">Drop-off Date</string>
    <string name="timeLbl">Booking Time</string>
    <string name="DiscountLbl">Discount</string>
    <string name="totAmount">Total Amount</string>
    <string name="btnBooking">Book Now</string>
    <string name="pickUpDate">Sun, 30 October</string>
    <string name="dropOfDate">Tue, 01 November</string>
    <string name="timeBooking">10.00 AM</string>
    <string name="lblDis">-</string>
    <string name="TotalLbl">Rs.36,000</string>
</resources>