<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".Create_Payment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/enterCarLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/EnterCardLbl"
        android:textColor="#151515"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/payMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/paymentLbl"
        android:textColor="#333333"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCarLbl"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/visaBtn"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F3EDED"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payMethod"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/w" />

    <ImageButton
        android:id="@+id/mastercardBtn"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payMethod"
        app:srcCompat="@drawable/r" />

    <TextView
        android:id="@+id/cardNoLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="5dp"
        android:text="@string/CardNoLbl"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visaBtn" />

    <TextView
        android:id="@+id/nameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="5dp"
        android:text="@string/nameLbl"
        android:textColor="#131313"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNoLabel" />

    <TextView
        android:id="@+id/exDateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="5dp"
        android:text="@string/exDateLbl"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cvcLbl"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/exDatelbl"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="@string/exDateHint"
        android:inputType="date"
        android:paddingLeft="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cvcLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cvcLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="112dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cvcLbl"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNameLabel" />

    <EditText
        android:id="@+id/cvcLabel"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="@string/CVCno"
        android:inputType="number"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/exDatelbl"
        app:layout_constraintTop_toBottomOf="@+id/cvcLbl" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/rb1"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvcLabel" />

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_light"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="30dp"
        android:paddingTop="16dp"
        android:paddingRight="30dp"
        android:paddingBottom="16dp"
        android:text="@string/payButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton1" />

    <EditText
        android:id="@+id/cardNoLabel"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/cardNoHint"
        android:inputType="number"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNoLbl"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cardNameLabel"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="@string/nameCard"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLbl"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>